# rust-calculator

./: Cargo.toml  build.rs
src/: main.rs
ui/: appwindow.slint
