[package]
name = "basic-calculator"
version = "0.1.0"
authors = ["umuterenornek <ueren123@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"

[build-dependencies]
slint-build = "1.3"
